--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,6 @@ dependencies {
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7'
     //json
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    //阿里巴巴开源json解析库
+    implementation 'com.alibaba:fastjson:1.1.46.android'
 }
