提交预售一级界面UI

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -28,7 +28,8 @@
         <activity android:name=".ui.fragment.ClassfiyDetailActivity" />
         <activity android:name=".ui.GoodsDetailActivity" />
         <activity android:name=".ui.SecKillActivity" />
-        <activity android:name=".ui.ConfirmOrderActivity"></activity>
+        <activity android:name=".ui.ConfirmOrderActivity" />
+        <activity android:name=".ui.PreSellActivity"></activity>
     </application>
 
 </manifest>
