--- a/app/build.gradle
+++ b/app/build.gradle
@@ -15,6 +15,13 @@ android {
             }
         }
     }
+
+    sourceSets{
+        main{
+            jniLibs.srcDir 'libs'
+            jni.srcDirs = []    //disable automatic ndk-build
+        }
+    }
     buildTypes {
         release {
             minifyEnabled false
