--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
     <!-- 这个权限用于获取wifi的获取权限，wifi信息会用来进行网络定位 -->
     <uses-permission android:name="android.permission.CHANGE_WIFI_STATE" />
-    <!--相机权限-->
+    <!-- 相机权限 -->
     <uses-permission android:name="android.permission.CAMERA" />
     <!-- 用于读取手机当前的状态 -->
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
@@ -35,11 +35,11 @@
         android:theme="@style/Theme.AppCompat.Light">
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
-            android:value="YRVAXKxrmD46vVWAeGdIOBI1YDq40lKo"></meta-data>
+            android:value="YRVAXKxrmD46vVWAeGdIOBI1YDq40lKo" />
 
         <activity
             android:name=".ui.MainActivity"
-            android:theme="@style/Theme.AppCompat.Light.NoActionBar"></activity>
+            android:theme="@style/Theme.AppCompat.Light.NoActionBar" />
         <activity android:name=".ui.BaseActivity" />
         <activity android:name=".ui.ClassfiyActivity" />
         <activity android:name=".ui.HomeSearchActivity" />
@@ -107,7 +107,7 @@
         <activity android:name=".ui.StoreQuotationListActivity" />
         <activity android:name=".ui.QuotationPeopleDetailActivity" />
         <activity android:name=".ui.ReleaseSupplyActivity" />
-        <activity android:name=".ui.LoginActivity"></activity>
+        <activity android:name=".ui.LoginActivity" />
         <activity android:name=".ui.CellPhoneLoginActivity" />
         <activity android:name=".ui.InputInvitationCodeActivity" />
         <activity android:name=".ui.LocalSpokesmanActivity" />
@@ -125,7 +125,7 @@
         <service
             android:name="com.baidu.location.f"
             android:enabled="true"
-            android:process=":remote"></service>
+            android:process=":remote" />
 
         <provider
             android:name="android.support.v4.content.FileProvider"
@@ -137,6 +137,7 @@
                 android:resource="@xml/file_path" />
         </provider>
 
+        <activity android:name=".ui.VideoBuyConfirmActivity"></activity>
     </application>
 
 </manifest>
