--- a/app/build.gradle
+++ b/app/build.gradle
@@ -82,4 +82,8 @@ dependencies {
 //    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.1'
 //    implementation 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.6.1'
     implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
+
+    implementation 'com.github.zhouzhuo810:ZzImageBox:1.1.5'
+
+    implementation 'com.contrarywind:Android-PickerView:4.1.6'
 }
