--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -117,6 +117,7 @@
         <activity android:name=".ui.ContactReferencesActivity" />
         <activity android:name=".ui.EditNicknameActivity"/>
         <activity android:name=".ui.AddressListActivity"/>
+        <activity android:name=".ui.EditAddressActivity"/>
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
