--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -32,7 +32,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light">
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
 
         <meta-data
             android:name="com.baidu.lbsapi.API_KEY"
@@ -118,6 +118,8 @@
         <activity android:name=".ui.EditNicknameActivity"/>
         <activity android:name=".ui.AddressListActivity"/>
         <activity android:name=".ui.EditAddressActivity"/>
+        <activity android:name=".ui.StoreGoodsInfoActivity"/>
+        <activity android:name=".ui.MyStoreOrderDetailActivity"/>
         <activity android:name=".ui.SplashActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
