--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation files('libs/alipaySdk-20180601.jar')
+    implementation files('libs/libammsdk.jar')
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -88,4 +90,6 @@ dependencies {
     implementation 'com.contrarywind:Android-PickerView:4.1.6'
     //接入微信支付
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
+
+    implementation 'com.squareup.okhttp3:okhttp:3.10.0'
 }
