--- a/app/build.gradle
+++ b/app/build.gradle
@@ -94,4 +94,6 @@ dependencies {
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
 
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
+
+    implementation 'com.android.support:design:22.2.1'
 }
