--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -35,8 +35,9 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
-        android:supportsRtl="true"
-        android:theme="@style/Theme.AppCompat.Light.NoActionBar">
+        android:supportsRtl="true">
+        <!--android:theme="@style/Theme.AppCompat.Light.NoActionBar"-->
+
 
         <!--注入百度地图-->
         <meta-data
@@ -75,7 +76,6 @@
         <activity android:name=".ui.SystemMessageActivity" />
         <activity android:name=".ui.SettingsActivity" />
         <activity android:name=".ui.ModifyNameActivity" />
-        <activity android:name=".ui.MyAchievementActivity" />
         <activity android:name=".ui.AskForPartnerActivity" />
         <activity android:name=".ui.SpokesmanRightsNoPermissionActivity" />
         <activity android:name=".ui.ConfirmAchievementActivity" />
@@ -153,6 +153,7 @@
         <activity android:name=".ui.NewsDetailActivity" />
         <activity android:name=".ui.VideoBuyConfirmActivity" />
         <activity android:name=".ui.ShopingCartConfirmActivity"/>
+        <activity android:name=".ui.MyTeamActivity"/>
 
         <!--微信支付-->
         <activity
