--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,10 +1,19 @@
 apply plugin: 'com.android.application'
 
 android {
+    signingConfigs {
+        config {
+            keyAlias 'key0'
+            keyPassword 'liu66liu'
+            storeFile file('D:/AndroidSDK/android.jks')
+            storePassword 'liu66liu'
+            v2SigningEnabled false
+        }
+    }
     compileSdkVersion 28
     defaultConfig {
         applicationId "com.zthx.npj"
-        minSdkVersion 21
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,8 +31,8 @@ android {
                 JPUSH_APPKEY : "8893ea927c390d073532296c", //JPush 上注册的包名对应的 Appkey.
                 JPUSH_CHANNEL: "developer-default", //暂时填写默认值即可.
         ]
+        multiDexEnabled true
     }
-
     sourceSets {
         main {
             jniLibs.srcDir 'libs'
@@ -49,9 +58,8 @@ android {
 }
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     implementation files('libs/alipaySdk-20180601.jar')
-
     implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:28.0.0'
@@ -60,48 +68,64 @@ dependencies {
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'com.android.support.test:runner:1.0.2'
     androidTestImplementation 'com.android.support.test.espresso:espresso-core:3.0.2'
+
     //黄油刀注解框架
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
+
     //沉浸式状态栏框架
     implementation 'com.gyf.immersionbar:immersionbar:2.3.3'
+
     //轮播图框架
     implementation 'com.youth.banner:banner:1.4.10'
+
     //图片加载框架
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
     implementation 'com.android.support:recyclerview-v7:28.0.0'
+
     //上下拉刷新框架
     implementation 'com.scwang.smartrefresh:SmartRefreshLayout:1.0.4-7'
     implementation 'com.scwang.smartrefresh:SmartRefreshHeader:1.0.4-7'
+
     //json
     implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+
     //阿里巴巴开源json解析库
     implementation 'com.alibaba:fastjson:1.1.46.android'
 
     //瀑布流
     implementation 'com.github.donkingliang:LabelsView:1.2.0'
+    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
 
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'//导入retrofit
-    implementation 'com.google.code.gson:gson:2.6.2'//Gson 库
+    //导入retrofit
+    implementation 'com.google.code.gson:gson:2.6.2'
+
+    //Gson 库
+
     //下面两个是RxJava 和 RxAndroid
     implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
     implementation 'io.reactivex.rxjava2:rxjava:2.x.y'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'//转换器，请求结果转换成Model
-    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'//配合Rxjava 使用
+    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
+    //转换器，请求结果转换成Model
+    implementation 'com.squareup.retrofit2:adapter-rxjava2:2.3.0'
+
+    //配合Rxjava 使用
 
     //bilibili视频框架
     implementation 'tv.danmaku.ijk.media:ijkplayer-java:0.8.8'
     implementation 'tv.danmaku.ijk.media:ijkplayer-armv7a:0.8.8'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-armv5:0.6.1'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-arm64:0.6.1'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.1'
-//    implementation 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.6.1'
+
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-armv5:0.6.1'
+
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-arm64:0.6.1'
+
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-x86:0.6.1'
+
+    //    implementation 'tv.danmaku.ijk.media:ijkplayer-x86_64:0.6.1'
     implementation 'tv.danmaku.ijk.media:ijkplayer-exo:0.8.8'
 
     //视频播放控制器
-
-
     implementation 'com.github.zhouzhuo810:ZzImageBox:1.1.5'
 
     //时间地点选择器
@@ -109,14 +133,17 @@ dependencies {
 
     //接入微信支付
     implementation 'com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+'
-
     implementation 'com.squareup.okhttp3:okhttp:3.10.0'
-
     implementation 'com.github.yuzhiqiang1993:zxing:2.1.1'
-
     implementation(name: 'egret', ext: 'aar')
+    implementation 'cn.jiguang.sdk:jpush:3.3.4'
 
-    implementation 'cn.jiguang.sdk:jpush:3.3.4'  // 此处以JPush 3.3.4 版本为例。
-    implementation 'cn.jiguang.sdk:jcore:2.1.2'  // 此处以JCore 2.1.2 版本为例。
-    implementation 'cn.jiguang.sdk:jmessage:2.9.0'  // 此处以JMessage 2.9.0 版本为例
+    // 此处以JPush 3.3.4 版本为例。
+    implementation 'cn.jiguang.sdk:jcore:2.1.2'
+
+    // 此处以JCore 2.1.2 版本为例。
+    implementation 'cn.jiguang.sdk:jmessage:2.9.0'
+
+    // 此处以JMessage 2.9.0 版本为例
+    implementation 'com.android.support:multidex:1.0.3'
 }
