--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -42,7 +42,8 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
-        android:supportsRtl="true">
+        android:configChanges="orientation|keyboardHidden"
+        android:supportsRtl="true"><!--configChanges设置切屏不重启生命周期，orientation执行一次-->
 
         <meta-data
             android:name="com.google.android.gms.car.application"
@@ -59,9 +60,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
                 <data
-                    android:scheme="http"
-                    android:host="game.npj-vip.com"
-                    android:pathPrefix="/jumpApp.html" />
+                    android:host="article"
+                    android:scheme="test"
+                    android:pathPrefix="/attr" />
             </intent-filter>
         </activity>
            <!-- android:theme="@style/TranslucentTheme" -->
