--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.zthx.npj">
 
     <!-- 权限 -->
@@ -23,6 +24,10 @@
     <uses-permission android:name="android.permission.CHANGE_NETWORK_STATE" />
     <uses-permission android:name="android.permission.GET_TASKS" />
 
+    <uses-permission android:name="android.permission.FLASHLIGHT" />
+    <uses-feature android:name="android.hardware.camera" />
+    <uses-feature android:name="android.hardware.camera.autofocus" />
+
     <!-- ShortcutBadger -->
     <uses-permission android:name="com.sec.android.provider.badge.permission.READ" />
     <uses-permission android:name="com.sec.android.provider.badge.permission.WRITE" />
@@ -34,6 +39,7 @@
     <uses-permission android:name="com.huawei.android.launcher.permission.READ_SETTINGS"/>
     <uses-permission android:name="com.huawei.android.launcher.permission.WRITE_SETTINGS"/>
     <uses-permission android:name="com.huawei.android.launcher.permission.CHANGE_BADGE"/>
+
     <!-- ShortcutBadger -->
 
     <application
@@ -42,7 +48,8 @@
         android:icon="@drawable/logo"
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
-        android:configChanges="orientation|keyboardHidden"
+        tools:replace="android:theme"
+        android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:supportsRtl="true"><!--configChanges设置切屏不重启生命周期，orientation执行一次-->
 
         <meta-data
@@ -82,7 +89,9 @@
         <activity android:name=".ui.StoreManagerQRCodeActivity" />
         <activity android:name=".ui.GiftActivity" />
         <activity android:name=".ui.AgricultureKnowledgeActivity" />
-        <activity android:name=".ui.SystemSolutionActivity" />
+        <activity android:name=".ui.SystemSolutionActivity"
+            android:configChanges="orientation|screenSize|keyboardHidden"
+            android:screenOrientation="portrait" />
         <activity android:name=".ui.AgricultureVideoMainActivity" />
         <activity android:name=".ui.BuyVideoActivity" />
         <activity android:name=".ui.fragment.SupplyMessageActivity" />
@@ -181,6 +190,7 @@
         <activity android:name=".ui.ShowLocationActivity"/>
         <activity android:name=".ui.StoreGoodsClassifyActivity"/>
         <activity android:name=".ui.HaiBaoActivity"/>
+        <activity android:name=".ui.LoadingActivity"/>
 
         <activity
             android:name=".wxapi.WXEntryActivity"
