--- a/app/build.gradle
+++ b/app/build.gradle
@@ -81,6 +81,7 @@ dependencies {
 
     //图片加载框架
     implementation 'com.github.bumptech.glide:glide:3.7.0'
+    implementation 'com.android.support:support-v4:28.0.0'
     implementation 'com.android.support:recyclerview-v7:28.0.0'
 
     //上下拉刷新框架
@@ -151,4 +152,6 @@ dependencies {
     implementation 'com.github.dueeeke.dkplayer:dkplayer-java:2.5.4'
     implementation 'com.github.dueeeke.dkplayer:dkplayer-armv7a:2.5.4'
     implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:2.5.4'
+
+    implementation 'com.github.open-android:ImageSelector:0.1.0'
 }
