--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -49,6 +49,7 @@
         android:label="@string/app_name"
         android:roundIcon="@drawable/logo"
         tools:replace="android:theme"
+        android:largeHeap="true"
         android:theme="@style/Theme.AppCompat.Light.NoActionBar"
         android:supportsRtl="true"><!--configChanges设置切屏不重启生命周期，orientation执行一次-->
 
