--- a/app/build.gradle
+++ b/app/build.gradle
@@ -154,4 +154,6 @@ dependencies {
     implementation 'com.github.dueeeke.dkplayer:dkplayer-ui:2.5.4'
 
     implementation 'com.github.open-android:ImageSelector:0.1.0'
+
+    implementation 'com.makeramen:roundedimageview:2.3.0'
 }
