--- a/tuikit/src/main/AndroidManifest.xml
+++ b/tuikit/src/main/AndroidManifest.xml
@@ -33,7 +33,7 @@
             android:screenOrientation="portrait"
             android:windowSoftInputMode="stateAlwaysHidden|adjustPan" />
 
-        <!--<provider
+        <provider
             android:name="android.support.v4.content.FileProvider"
             android:authorities="${applicationId}.uikit.fileprovider"
             android:exported="false"
@@ -43,7 +43,7 @@
                 tools:replace="android:resource"
                 android:name="android.support.FILE_PROVIDER_PATHS"
                 android:resource="@xml/file_paths_public"/>
-        </provider>-->
+        </provider>
     </application>
 
 </manifest>
